# ParallelLabs

./: README.md  build.sh  run.sh
env/: Dockerfile
labs/: build.sh
labs/lab1/: CMakeLists.txt  Report_Lab1.docx  main.cpp  task1.cpp  task2.cpp  task_run.sh
labs/lab1/include/: bench.hpp  matrix_mul.hpp  test.hpp
labs/lab1/stats/: stats.json  stats.py
labs/lab2/: Report_lab2.docx  main.cpp
labs/lab2/include/: bench.hpp  solve_eq.hpp  test.hpp
labs/lab2/stats/: stats.json  stats.py
labs/lab3/: CMakeLists.txt  Report_lab3.docx  main.cpp
labs/lab3/include/: bench.hpp  integral.hpp  test.hpp
labs/lab3/stats/: stats.json  stats.py
labs/show_scripts/: lab1.sh
